--- a/TopShelfCustomer/TopShelfCustomer/Views/ChooseStoreView.xaml
+++ b/TopShelfCustomer/TopShelfCustomer/Views/ChooseStoreView.xaml
@@ -17,8 +17,11 @@
                 <StackLayout Orientation="Vertical" >
 
                     <!-- Back Button -->
-                    <ImageButton Source="back_icon.png" Command="{Binding NavigateBackCommand}" BackgroundColor="{StaticResource Light}"
-                                 CornerRadius="22" HorizontalOptions="Start" Margin="10,0,0,0" HeightRequest="50"/>
+                    <Frame HorizontalOptions="Start" WidthRequest="50" Padding="0"
+                           Margin="10,0,0,0" CornerRadius="42">
+                        <ImageButton Source="back_icon.png" Command="{Binding NavigateBackCommand}" 
+                                     BackgroundColor="{StaticResource Light}" CornerRadius="22" Aspect="AspectFit"/>
+                    </Frame>
 
                     <!-- Title Label -->
                     <Label Text="Choose your Store" HorizontalOptions="CenterAndExpand" FontFamily="{StaticResource MediumFont}"
