--- a/TopShelfCustomer/TopShelfCustomer/Views/PasswordRetrievalView.xaml
+++ b/TopShelfCustomer/TopShelfCustomer/Views/PasswordRetrievalView.xaml
@@ -20,8 +20,11 @@
                      Grid.Row="0" Padding="0, 40, 0, 40" >
                 <StackLayout Orientation="Vertical">
                     <!-- Back Button -->
-                    <ImageButton Source="back_icon.png" Command="{Binding NavigateBackCommand}" BackgroundColor="{StaticResource Light}"
-                                 CornerRadius="22" HorizontalOptions="Start" Margin="10,0,0,0" HeightRequest="50"/>
+                    <Frame HorizontalOptions="Start" WidthRequest="50" Padding="0"
+                           Margin="10,0,0,0" CornerRadius="42">
+                        <ImageButton Source="back_icon.png" Command="{Binding NavigateBackCommand}" 
+                                     BackgroundColor="{StaticResource Light}" CornerRadius="22" Aspect="AspectFit"/>
+                    </Frame>
                     <StackLayout Orientation="Horizontal" HorizontalOptions="Center" Spacing="15">
                         <Image Source="TopShelfAppLogo.png" HeightRequest="60"/>
                         <Label Text="TopShelf" FontSize="30" FontFamily="{StaticResource MediumFont}"
@@ -36,7 +39,7 @@
             <!-- Email -->
             <Entry Placeholder="E-mail" FontSize="15" WidthRequest="280" Text="{Binding EmailInput, Mode=TwoWay}"
                    TextColor="{StaticResource LightTextColor}" Grid.Row="1" HeightRequest="46" HorizontalOptions="CenterAndExpand"
-                   FontFamily="{StaticResource NormalFont}" BackgroundColor="{StaticResource Accent}" PlaceholderColor="Gray"/>
+                   FontFamily="{StaticResource NormalFont}" BackgroundColor="{StaticResource Lightest}" PlaceholderColor="Gray"/>
 
             <!-- Error Message -->
             <Label Text="Error: could not request password reset" FontSize="15" TextColor="Red"
@@ -46,16 +49,16 @@
             <!-- Button and warning label -->
             <StackLayout Orientation="Vertical" Grid.Row="3" VerticalOptions="Start" Padding="30, 0, 30, 60">
                 <!-- Submit Button -->
-                <Button Command="{Binding RequestPasswordResetCommand}" BackgroundColor="#424C55" Text="Request Reset Email"
-                    FontSize="18" TextColor="White" HeightRequest="50" FontFamily="{StaticResource MediumFont}"
+                <Button Command="{Binding RequestPasswordResetCommand}" BackgroundColor="{StaticResource Light}" Text="Request Reset Email"
+                    FontSize="18" TextColor="{StaticResource Darkest}" HeightRequest="50" FontFamily="{StaticResource MediumFont}"
                     Margin="40,40,40,30" BorderColor="Black" BorderWidth="2"/>
 
                 <!-- Help Text Labels -->
                 <Label Text="Please ensure that the e-mail is correct" FontSize="16"
-                       TextColor="White" HorizontalTextAlignment="Center"
+                       TextColor="{StaticResource LightTextColor}" HorizontalTextAlignment="Center"
                        FontFamily="{StaticResource NormalFont}" />
                 <Label Text="If you do not see the message in a few minutes, check your Junk folder"
-                       FontSize="16" TextColor="White" HorizontalTextAlignment="Center"
+                       FontSize="16" TextColor="{StaticResource LightTextColor}" HorizontalTextAlignment="Center"
                        FontFamily="{StaticResource NormalFont}" />
             </StackLayout>
 
