--- a/TopShelfCustomer/TopShelfCustomer/Views/ShopView.xaml
+++ b/TopShelfCustomer/TopShelfCustomer/Views/ShopView.xaml
@@ -20,8 +20,11 @@
                 <StackLayout Orientation="Vertical">
 
                     <!-- Back Button -->
-                    <ImageButton Source="back_icon.png" Command="{Binding NavigateBackCommand}" BackgroundColor="{StaticResource Light}"
-                                 CornerRadius="22" HorizontalOptions="Start" Margin="10,0,0,0" HeightRequest="50"/>
+                    <Frame HorizontalOptions="Start" WidthRequest="50" Padding="0"
+                           Margin="10,0,0,0" CornerRadius="42">
+                        <ImageButton Source="back_icon.png" Command="{Binding NavigateBackCommand}" 
+                                     BackgroundColor="{StaticResource Light}" CornerRadius="22" Aspect="AspectFit"/>
+                    </Frame>
                     <!-- Store Name Label -->
                     <Label Text="{Binding SelectedStoreName}" FontSize="30" HorizontalOptions="Center"
                            FontFamily="{StaticResource MediumFont}" VerticalTextAlignment="Center" TextColor="White" />
